fix: bug overflow

--- a/style.css
+++ b/style.css
@@ -414,7 +414,7 @@ button {
   margin: 0px 0px;
   border-radius: 2px;
   gap: 20px;
-  height: 90vh;
+  height: 100vh;
 }
 
 .conteudo-secundario-titulo{
@@ -500,7 +500,7 @@ button {
   }
 
  .rodape{
-  height: 30vh;
+  height:35vh;
  }
 
   .conteudo-rodape {
